Added File Selector

--- a/seeql/package.json
+++ b/seeql/package.json
@@ -15,7 +15,11 @@
     "commands": [
       {
         "command": "seeql.createDiagram",
-        "title": "Create a Diagram of a Create SQL Statement"
+        "title": "SeeQL: Create a Diagram of a Create SQL Statement"
+      },
+      {
+        "command": "seeql.createRelationalAlgebra",
+        "title": "SeeQL: Create a Relational Algebra Diagram"
       }
     ]
   },
