--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,19 +15,16 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: seeql
-
-
+        
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
-
+        
     - name: Install dependencies
-      run: |
-        cd seeql
-        npm install
+      run: npm install
+      working-directory: seeql
 
     - name: Run tests
-      run: |
-        cd seeql
-        npm test
+      run: npm test
+      working-directory: seeql
