--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         node-version: 18.x
         
+    - name: Install xvfb
+      run: sudo apt-get install -y xvfb
+        
     - name: Install dependencies
       run: npm install
       working-directory: seeql
