--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,12 @@ jobs:
       with:
         node-version: 18.x
         
-    - name: Install xvfb
-      run: sudo apt-get install -y xvfb
+    - name: Start virtual display
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        Xvfb :99 -screen 0 1024x768x16 & 
+        export DISPLAY=:99
         
     - name: Install dependencies
       run: npm install
