--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,10 @@ jobs:
       with:
         node-version: 18.x
         
-    - name: Start virtual display
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y xvfb
-        Xvfb :99 -screen 0 1024x768x16 & 
-        export DISPLAY=:99
-        
     - name: Install dependencies
       run: npm install
       working-directory: seeql
 
     - name: Run tests
-      run: npm test
+      run: xvfb-run --auto-servernum --server-args="-screen 0 1920x1080x24" npm test
       working-directory: seeql
