--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       run: npm install
       working-directory: seeql
 
+    - name: Install sqlite3
+      run: npm install sqlite3
+      working-directory: seeql
+
     - name: Run tests
       run: xvfb-run --auto-servernum --server-args="-screen 0 1920x1080x24" npm test
       working-directory: seeql
