--- a/seeql/package.json
+++ b/seeql/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@vscode/test-electron": "^2.4.1",
+    "axios": "^1.8.1",
     "eslint": "^9.16.0",
     "mermaid": "^11.4.1",
     "node-sql-parser": "^5.3.6",
