Added a public API key for mistral model

--- a/seeql/package.json
+++ b/seeql/package.json
@@ -30,14 +30,12 @@
         "title": "SeeQL: Run SQL Query"
       },
       {
-
         "command": "seeql.generateSQLQuery",
-        "title": "SeeQL: General SQL Query"
+        "title": "SeeQL: Generate SQL Query"
       },
       {
         "command": "seeql.createDB",
         "title": "SeeQL: Create Database From CSV/SQL File"
-
       }
     ]
   },
@@ -59,6 +57,7 @@
     "@vscode/test-electron": "^2.4.1"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^1.5.1",
     "@vscode/test-electron": "^2.4.1",
     "axios": "^1.8.1",
     "csv-parser": "^3.2.0",
