--- a/seeql/package.json
+++ b/seeql/package.json
@@ -30,8 +30,12 @@
         "title": "SeeQL: Open Database"
       },
       {
+        "command": "seeql.runQuery",
+        "title": "SeeQL: Run SQL Query"
+      },
+      {
         "command": "seeql.generateSQLQuery",
-        "title": "SeeQL: General SQL Query"
+        "title": "SeeQL: Generate SQL Query"
       },
       {
         "command": "seeql.createDB",
@@ -59,6 +63,7 @@
     "@vscode/test-electron": "^2.4.1"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^1.5.1",
     "@vscode/test-electron": "^2.4.1",
     "axios": "^1.8.1",
     "csv-parser": "^3.2.0",
