--- a/seeql/package.json
+++ b/seeql/package.json
@@ -59,6 +59,7 @@
     "@vscode/test-electron": "^2.4.1"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^1.5.1",
     "@vscode/test-electron": "^2.4.1",
     "axios": "^1.8.1",
     "csv-parser": "^3.2.0",
