--- a/seeql/package.json
+++ b/seeql/package.json
@@ -63,6 +63,7 @@
     "@vscode/test-electron": "^2.4.1",
     "axios": "^1.8.1",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.4.7",
     "eslint": "^9.16.0",
     "mermaid": "^11.4.1",
     "mssql": "^9.3.2",
