using .env for api key

--- a/seeql/package.json
+++ b/seeql/package.json
@@ -64,9 +64,10 @@
     "axios": "^1.8.1",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
+    "env": "^0.0.2",
     "eslint": "^9.16.0",
     "mermaid": "^11.4.1",
-    "mssql": "^9.3.2",
+    "mssql": "^11.0.1",
     "node": "^18.20.7",
     "node-sql-parser": "^5.3.6",
     "sqlite": "^5.1.1",
